# PROJ_Q_YV35_Reset_BMC_tool

./: CMakeLists.txt  README.md
common/: util_common.c
common/freeipmi/: util_freeipmi.c  util_ipmiraw.c
common/freeipmi/include/: util_freeipmi.h
common/include/: util_common.h
common/plock/: util_plock.c
common/plock/include/: util_plock.h
freeipmi-1.6.9/libfreeipmi/: libfreeipmi.pc
freeipmi-1.6.9/libfreeipmi/include/freeipmi/: freeipmi.h
include/: config.h  proj_config.h
src/: main.c
